--- a/test_site.html
+++ b/test_site.html
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
   <title>Test GA Page</title>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-20XRZ68DDW"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){ dataLayer.push(arguments); }
-    gtag('js', new Date());
+<!-- Google Analytics 4 tag -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-20XRZ68DDW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    gtag('config', 'G-20XRZ68DDW');
-  </script>
+  gtag('config', 'G-20XRZ68DDW');
+</script>
+
 </head>
 
 <body>
